Update: redirects and about

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,16 +1,19 @@
-import profilePic from '@site/static/img/profile.jpeg';
+import profilePic from "@site/static/img/profile.jpeg";
+import LifeMap from "./components/LifeMap";
 
 <img
-src={profilePic}
-alt="profile picture adithya krishnan"
-width="175px"
-height="175px"
-style={{margin: "auto 4rem 2rem auto"}}
+    src={profilePic}
+    alt="profile picture adithya krishnan"
+    width="175px"
+    height="175px"
+    style={{ margin: "auto 4rem 2rem auto" }}
 />
 
 Hey there 👋 !
 
 I am Adithya. There are quite a few things that interest me, a lot! To put things into perspective, here is my story, where I try to connect the dots.
+
+<LifeMap />
 
 When I was a kid, I broke a lot of things at home, out of curiosity to understand how things worked. Watches, radios, projectors, toys (all of them, some 3 or 4 I had ended up in pieces), cameras. When I was about 10, my mom bought me an electronics hobby kit (best birthday gift no. 1). At its core, it had an IC 555 a typical amplifier, along with it a bunch of transistors, resistors, diodes, switches and a reusable breadbord with wires. I learnt so much from it, by replicating the circuits from the book that came along with it and ofcourse by messing around with connections just to see what would happend, or most importantly why nothing happend.
 
